# TestGame

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: default.fs  default.vs  default_textured.fs  default_textured.vs
src/: GameApp.cpp  GameApp.h  Globals.cpp  Globals.h  main.cpp
src/components/: BaseComponent.h  CollisionComponent.cpp  CollisionComponent.h  PhysicsComponent.cpp  PhysicsComponent.h
src/datas/: ImageData.h
src/events/: EventListener.cpp  EventListener.h  Events.cpp  Events.h
src/graphics/objects/: BaseObject.h  Camera.cpp  Camera.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  TestRect.cpp  TestRect.h  Transform.h  Updatable.h
src/graphics/objects/helpers/: Coord.cpp  Coord.h
src/graphics/objects/meshes/: Cube.cpp  Cube.h  Quad.cpp  Quad.h
src/graphics/scene/: Scene.cpp  Scene.h
src/managers/: CameraManager.cpp  CameraManager.h  EventsManager.cpp  EventsManager.h  InputManager.cpp  InputManager.h  ResourcesManager.cpp  ResourcesManager.h  SceneManager.cpp  SceneManager.h  ShadersManager.cpp  ShadersManager.h
src/physics/: Collision.cpp  Collision.h  Mechanics.cpp  Mechanics.h
src/physics/maths/: AABB.cpp  AABB.h  Plane.cpp  Plane.h
src/systems/: TaskSystem.cpp  TaskSystem.h
src/tools/: GameStorage.cpp  GameStorage.h  Logger.cpp  Logger.h
